fix bug #42139 (XMLReader option constants are broken using XML()) add test